# QT-TestApp

./: CMakeLists.txt  DemoProject.qmlproject  DemoProject.qmlproject.qtds  qmlmodules
content/: App.qml  CMakeLists.txt  HomeScreen.ui.qml  MyMainViewRectangle.ui.qml  Screen01.ui.qml.autosave
imports/: CMakeLists.txt
imports/DemoProject/: CMakeLists.txt  qmldir
imports/DemoProject/designer/: plugin.metainfo
src/: import_qml_plugins.h
